--- a/tasks/ubuntu-wordpress.yml
+++ b/tasks/ubuntu-wordpress.yml
@@ -60,7 +60,6 @@
   notify:
     - Restart Nginx
 
-
 - name: "Installing mariadb and python package"
   ansible.builtin.package:
     name: "{{ item }}"
@@ -170,6 +169,11 @@
     - mysql
     - wordpress
 
+- name: "Check if WordPress is already copied"
+  ansible.builtin.stat:
+    path: "/var/www/{{ domain }}/index.php"
+  register: wordpress_site_exists
+
 - name: "Copying website files"
   ansible.builtin.copy:
     src: "/tmp/wordpress/"
@@ -178,6 +182,7 @@
     group: "{{ group }}"
     remote_src: true
     mode: "0644"
+  when: not wordpress_site_exists.stat.exists
 
 - name: "Set permissions of document root"
   ansible.builtin.file:
@@ -198,11 +203,10 @@
 - name: "Restarting services"
   ansible.builtin.service:
     name: "{{ item }}"
-    state: restarted
+    state: reloaded
     enabled: true
   loop:
     - nginx
-    - mysql
   tags:
     - nginx
     - mysql
